# StudioFoto

./: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
android/app/: build.gradle
assets/fonts/: .gitkeep
assets/icons/: .gitkeep
assets/portfolio/: .gitkeep
backend/: .env.example  API_DOCUMENTATION.md  API_TESTING.md  DASHBOARD_GUIDE.md  INSTALLATION.md  LARAVEL_DASHBOARD_GUIDE.md  MOBILE_INTEGRATION_GUIDE.md  MOBILE_QUICK_START.md  QUICK_START.md  README.md  SECURITY.md  composer.json  postman_collection.json
backend/app/Exceptions/: Handler.php
backend/app/Http/: Kernel.php
backend/app/Models/: Booking.php  Category.php  Gallery.php  Package.php  Payment.php  Review.php  Schedule.php  User.php
backend/config/: app.php  cors.php
backend/database/factories/: UserFactory.php
backend/database/migrations/: 2014_10_12_000000_create_users_table.php  2024_01_01_000001_create_packages_table.php  2024_01_01_000002_create_schedules_table.php  2024_01_01_000003_create_bookings_table.php  2024_01_01_000004_create_payments_table.php  2024_01_01_000005_create_galleries_table.php  2024_01_01_000006_create_reviews_table.php  2025_11_06_090014_create_categories_table.php
backend/database/seeders/: CategorySeeder.php  DatabaseSeeder.php  GallerySeeder.php  NewPackageSeeder.php  PackageCategorySeeder.php  PackageSeeder.php  ScheduleSeeder.php  UserSeeder.php
backend/public/: api-tester.html  dashboard.html  login.html
backend/routes/: api.php  web.php
ios/Runner/: Info.plist
lib/: main.dart
lib/config/: app_router.dart  app_theme.dart
lib/models/: booking_model.dart  portfolio_model.dart  service_model.dart  user_model.dart
lib/providers/: auth_provider.dart  booking_provider.dart  portfolio_provider.dart  service_provider.dart
lib/screens/admin/: admin_bookings_screen.dart  admin_dashboard_screen.dart  admin_portfolio_screen.dart  admin_services_screen.dart
lib/screens/auth/: login_screen.dart  register_screen.dart
lib/screens/booking/: booking_detail_screen.dart  booking_screen.dart
lib/screens/home/: home_screen.dart
lib/screens/portfolio/: portfolio_screen.dart
lib/screens/profile/: profile_screen.dart
lib/screens/services/: services_screen.dart
lib/services/: api_service.dart
linux/: CMakeLists.txt  generated_plugin_registrant.cc  generated_plugin_registrant.h  main.cc  my_application.cc  my_application.h  utils.cc  utils.h  window_configuration.cc  window_configuration.h
macos/Runner/: Info.plist
mobile/: BACKEND_SETUP.md  README.md  SCREENS_GUIDE.md  STRUCTURE.md  TROUBLESHOOTING_LOGIN.md  pubspec.yaml
mobile/lib/: main.dart
mobile/linux/: CMakeLists.txt
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
prime-api-node/: package-lock.json  package.json
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  flutter_window.cc  flutter_window.h  main.cpp  resource.h  runner.rc  utils.cc  utils.h  win32_window.cc  win32_window.h
windows/runner/flutter/: generated_plugin_registrant.cc  generated_plugin_registrant.h
(+82 files in other folders)
